--- a/scss/global/_window.scss
+++ b/scss/global/_window.scss
@@ -993,7 +993,7 @@ button:focus {
   visibility: hidden;
   width: 150px;
   background-color: black;
-  //  color: $c-green;
+  color: $c-green;
   text-align: center;
   border-radius: 3px;
   padding: 2px 0;
@@ -1001,7 +1001,7 @@ button:focus {
   z-index: 1;
   // top: -5px;
   // right: 105%;
-  margin-left: -100px;
+  margin-left: -150px;
   border-style: solid;
   border-color: var(--aliengreen);
 }
